refactor to allow encrypting SAML assertion with signing